spl2/hn_tests/failing/udp_echo_client-1.hn
hnMain = {
	c = udp_connect "localhost" 99
	tb start_time = {
		ping = udp_receive c
		t4 end_time = print 0
		t3 reply = bind (voidbind (print reply) time_msec) t4
		bind ping t3
	}
	forever (bind time_msec tb)
}